Renamed project Updated .gitignore

--- a/server/etc/mpdns.conf
+++ b/server/etc/mpdns.conf
@@ -1,5 +1,5 @@
 {
-    "pid_file": "/var/run/mpdns.pid",
+    "pid_file": "/var/run/mpddns.pid",
     "user": "nobody",
     "group": "nogroup",
     "dns_bind": "0.0.0.0",
