fixed indentation and config

--- a/server/etc/mpdns.conf
+++ b/server/etc/mpdns.conf
@@ -6,6 +6,9 @@
     "dns_port": 53,
     "update_bind": "0.0.0.0",
     "update_port": 7331,
+    "http_update_bind": "0.0.0.0",
+    "http_update_port": 8000,
+    "cache_file": "/tmp/dnsCache.json",
     "catalog": {
         "home.example.com": {
             "password": "secret123"
