--- a/server/etc/mpddns.conf
+++ b/server/etc/mpddns.conf
@@ -8,7 +8,7 @@
     "update_port": 7331,
     "http_update_bind": "0.0.0.0",
     "http_update_port": 8000,
-    "cache_file": "/tmp/dnsCache.json",
+    "cache_file": "/tmp/mpddns.cache",
     "catalog": {
         "home.example.com": {
             "password": "secret123"
