Re-implemented config module

--- a/server/etc/mpddns.conf
+++ b/server/etc/mpddns.conf
@@ -1,17 +1,22 @@
-{
-    "pid_file": "/var/run/mpddns.pid",
-    "user": "nobody",
-    "group": "nogroup",
-    "dns_bind": "0.0.0.0",
-    "dns_port": 53,
-    "update_bind": "0.0.0.0",
-    "update_port": 7331,
-    "http_update_bind": "0.0.0.0",
-    "http_update_port": 8000,
-    "cache_file": "/tmp/mpddns.cache",
-    "catalog": {
-        "home.example.com": {
-            "password": "secret123"
-        }
-    }
-}
+[mpddns]
+user = nobody
+group = nogroup
+pid_file = /var/run/mpddns.pid
+cache_file = /tmp/mpddns.cache
+
+[dns_server]
+bind = 0.0.0.0
+port = 53
+
+[update_server]
+enabled = 1
+bind = 0.0.0.0
+port = 7331
+
+[http_update_server]
+enabled = 0
+bind = 0.0.0.0
+port = 8000
+
+[catalog]
+home.example.com = secret123
