--- a/etc/systemd/mpddns.service
+++ b/etc/systemd/mpddns.service
@@ -3,9 +3,8 @@ Description=Simple dynamic DNS service
 After=network.target
 
 [Service]
-Type=forking
+Type=simple
 ExecStart=/usr/local/bin/mpddns_server
-PIDFile=/var/run/mpddns.pid
 
 [Install]
 WantedBy=multi-user.target
